# squad-ops

./: .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GUARDRAILS_UPDATE_SUMMARY.md  LICENSE  README.md  SETUP.md  SIP_IMPLEMENTATION_ASSESSMENT.md  SQUADOPS_BUILD_PARTNER_PROMPT.md  SQUADOPS_CONTEXT_HANDOFF.md  SQUADOPS_EXTENDED_ROADMAP.md  SQUADOPS_MVP_ROADMAP.md  SQUADOPS_ROADMAP.md  TEST_COVERAGE_90PCT_COMPLETE.md  TEST_HARNESS_SESSION_SUMMARY.md  TEST_PROGRESS_CHECKPOINT.md  TEST_SIP027_OPENTELEMETRY.md  TEST_SIP027_RESULTS.md  TEST_SIP027_STATUS.md  app.js  check_rebuild_status.sh  ci-constraints.txt  coverage.xml  demo_role_factory.py  deploy-squad.sh  docker-compose.keycloak.yml  docker-compose.langfuse.yml  docker-compose.yml  index.html  monitor_rebuild.sh  nginx.conf  pyproject.toml  pytest.ini  real_warmboot_run006.py  rebuild_and_deploy.sh  (+14 more)
.claude/: settings.json
.claude/hooks/: lint-test-quality.sh
.github/workflows/: ci.yml
_v0_legacy/agents/: base_agent.py
_v0_legacy/config/: agent_config.py  base.yaml  llm_config.yaml  version.py
_v0_legacy/infra/: README.md
adapters/: __init__.py  jsonb.py
adapters/audit/: __init__.py  factory.py  logging_adapter.py
adapters/auth/: __init__.py  factory.py
adapters/capabilities/: __init__.py  aci_executor.py  factory.py  filesystem.py
adapters/comms/: __init__.py  a2a_client.py  a2a_server.py  chat_executor.py  factory.py  rabbitmq.py
adapters/cycles/: __init__.py  config_project_registry.py  config_squad_profile.py  correction_runner.py  dispatched_flow_executor.py  distributed_flow_executor.py  execution_errors.py  factory.py  filesystem_artifact_vault.py  in_process_flow_executor.py  log_forwarding_install.py  memory_cycle_registry.py  noop_workflow_tracker.py  postgres_cycle_registry.py  postgres_squad_profile.py  prefect_log_forwarder.py  prefect_reporter.py  prefect_workflow_tracker.py  pulse_boundary_runner.py  reply_router.py  run_completion.py  task_dispatcher.py  task_naming.py  workflow_tracker_factory.py
adapters/embeddings/: __init__.py  factory.py  ollama.py
adapters/events/: __init__.py  factory.py  in_process_cycle_event_bus.py  noop_cycle_event_bus.py  runtime_event_publisher.py
adapters/llm/: __init__.py  factory.py  ollama.py
adapters/memory/: __init__.py  factory.py  lancedb.py
adapters/noop/: __init__.py  ports.py
adapters/observability/: __init__.py  healthcheck_http.py
adapters/persistence/: __init__.py  chat_cache.py  chat_repository.py  factory.py
adapters/prompts/: __init__.py  factory.py  filesystem.py  filesystem_asset_adapter.py  langfuse_asset_adapter.py
adapters/secrets/: docker.py  env.py  factory.py  file.py
adapters/tasks/: __init__.py  factory.py  prefect.py  sql.py
adapters/telemetry/: __init__.py  console.py  factory.py  noop_llm_observability.py  null.py  otel.py
adapters/tools/: __init__.py  docker.py  factory.py  git.py  local_filesystem.py
agents/: Dockerfile  Dockerfile.data  Dockerfile.eve  Dockerfile.glyph  Dockerfile.hal  Dockerfile.joi  Dockerfile.max  Dockerfile.nat  Dockerfile.neo  Dockerfile.og  Dockerfile.quark  Dockerfile.template  base_agent.py  capability_bindings.yaml  data.py  eve.py  glyph.py  hal.py  joi.py  nat.py  og.py  requirements.txt
agents/capabilities/: __init__.py  build_artifact.py  build_requirements_generator.py  catalog.yaml  comms_chat.py  docker_builder.py  docker_deployer.py  documentation_creator.py  governance_approval.py  governance_escalation.py  governance_task_coordination.py  loader.py  manifest_generator.py  prd_processor.py  reasoning_event_emitter.py  task_completion_emitter.py  task_completion_handler.py  task_creator.py  task_delegator.py  telemetry_collector.py  version_archiver.py  warmboot_memory_handler.py  warmboot_validator.py  wrapup_generator.py
agents/context/: pulse_context.py
agents/contracts/: __init__.py  agent_request.py  agent_response.py  build_manifest.py  task_spec.py
agents/cycle_data/: cycle_data_store.py  project_validator.py
agents/data/: Dockerfile
agents/eve/: Dockerfile  base_agent.py  config.py  eve.py
agents/factory/: agent_factory.py  docker_generator.py  enhanced_role_factory.py  role_factory.py
agents/glyph/: Dockerfile  config.py
agents/hal/: Dockerfile  config.py
agents/instances/: instances.yaml
agents/joi/: Dockerfile
agents/llm/: __init__.py  client.py  router.py  validators.py
agents/max/: Dockerfile
agents/memory/: base.py  lancedb_adapter.py  promotion.py  sql_adapter.py
agents/nat/: Dockerfile  config.py
agents/neo/: Dockerfile  (+2 more)
config/: agent_config.py  defaults.yaml  deployment_config.py  llm_config.yaml  projects.yaml  squad-profiles.yaml  unified_config.py  version.py
console/: Caddyfile  Dockerfile
docs/: Agent_Managed_WarmBoot.md  DEVELOPMENT_SAFETY_GUIDE.md  GETTING_STARTED.md  HARDWIRED_LOGIC_DETECTION.md  LINTING_FIX_PRIORITIZATION.md  MEM0-VS-MEMORI-COMPARISON.md  MEMORI-INTEGRATION-ANALYSIS.md  MEMORY_LANCEDB_RECOMMENDATION.md  MEMORY_SQLITE_RECOMMENDATION.md  MONITOR_WARMBOOT_LOGS.md  OBSERVABILITY_URLS.md  ROADMAP.md  SETUP.md  SIP-0048-FINAL-STATUS.md  SIP-0048-IMPLEMENTATION-SUMMARY.md  SIP-021-MEMORY-IMPLEMENTATION-PLAN.md  SQUADOPS_BUILD_PARTNER_PROMPT.md  SQUADOPS_CONTEXT_HANDOFF.md  SQUADOPS_ROADMAP.md  SquadOps_v1.0_Roadmap_TechLead.md  TESTING_HEALTH_CHECK.md  TEST_FACTORY_IMPROVEMENTS.md  TEST_IMPLEMENTATION_STATUS.md  TEST_INTEGRITY_GUIDE.md  TEST_INTERFACE_MISMATCHES.md  TEST_LEVEL_GUIDE.md  TEST_QUALITY_STANDARD.md  UNIT_TEST_COVERAGE_ASSESSMENT.md  WARMBOOT_EXECUTION_PROTOCOL.md  agent-runtime-status-model.md  process_registry.md
examples/: README.md
infra/: 00-create-databases.sh  01-init-tables.sh  config.env  init.sql
requirements/: agent.txt  api.txt  base.txt
scripts/: SCRIPT_ANALYSIS_REPORT.md  SCRIPT_REORGANIZATION_SUMMARY.md  build_agent.py  build_all_agents.py  migrate_task_schema.py
sips/: README.md  registry.yaml
tests/: README.md  conftest.py  pytest.ini  requirements.txt  run_tests.sh
warm-boot/: README.md
(+2535 files in other folders)
