[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Note: No package-dir override - allows packages from both src/ and root

[tool.setuptools.packages.find]
where = ["src", "."]  # Search both src/ and project root
include = ["squadops*", "adapters*"]  # Include both packages

[project]
name = "squadops"
version = "0.9.5"
description = "SquadOps: a production-grade multi-agent orchestration framework."
requires-python = ">=3.11"
authors = [
  { name = "Jason Ladd / Backspring Industries" }
]
readme = "README.md"
license = { text = "MIT" }
# You can add dependencies here later if you want to publish as a package.

[project.scripts]
squadops = "squadops.cli.main:app"

[project.optional-dependencies]
langfuse = ["langfuse>=2.0"]
cli = ["typer>=0.9", "httpx>=0.25", "rich>=13.0"]

#######################################
# Ruff - Linting & basic code hygiene #
#######################################

[tool.ruff]
target-version = "py311"
line-length = 100

extend-exclude = [
    "dist",
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "warm-boot",
    "sips",
    "docs",
    "htmlcov",
    "scripts/dev/migrations",
    "_v0_legacy",
]

[tool.ruff.lint]
# Rule sets: E,F = pycodestyle errors + pyflakes, I = import sorting, B = bugbear, UP = pyupgrade
select = ["E", "F", "I", "B", "UP"]

ignore = [
    "E501",  # line length (handled by Black)
    "B008",  # function call in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "B",
]

##########################
# Black - Code formatter #
##########################

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = false

##########################
# Pytest - Test running  #
##########################

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

markers = [
    # Test type markers
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interactions",
    "regression: Regression tests for critical workflows",
    "performance: Performance and load tests",
    "slow: Slow running tests",
    "smoke: Smoke tests for quick validation",
    "stack_validation: Full stack validation tests (requires running containers)",
    # Infrastructure markers
    "database: Tests that require database",
    "rabbitmq: Tests that require RabbitMQ",
    "redis: Tests that require Redis",
    "docker: Tests that require Docker",
    # Domain markers (SIP-0.8.9)
    "domain_agents: Agent domain tests",
    "domain_capabilities: Capability domain tests",
    "domain_skills: Skill domain tests",
    "domain_api: API domain tests",
    "domain_memory: Memory domain tests",
    "domain_config: Config domain tests",
    "domain_build: Build/packaging domain tests",
    "domain_governance: Governance domain tests",
    "domain_orchestration: Orchestration domain tests",
    "domain_adapters: Adapter domain tests",
    "domain_telemetry: Telemetry domain tests",
    # LangFuse (SIP-0061)
    "langfuse: Tests that require a running LangFuse instance",
    # Auth (SIP-0062/0063)
    "auth: Tests that exercise authentication/authorization logic",
    # CLI + Contracts (SIP-0065)
    "domain_cli: CLI domain tests",
    "domain_contracts: Contract domain tests",
]

###########################
# Coverage.py - Code cov  #
###########################

[tool.coverage.run]
branch = true
source = [
  "src/squadops",
  "scripts",
]
omit = [
  "tests/*",
  "dist/*",
  "**/__init__.py",
  "warm-boot/*",
  "scripts/dev/migrations/*",
  "htmlcov/*",
  "sips/*",
  "docs/*",
  "_v0_legacy/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0

###########################
# Mypy - Optional typing  #
###########################

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

# Optional: Add per-module overrides for stricter type checking
# [[tool.mypy.overrides]]
# module = "agents.*"
# disallow_untyped_defs = true