[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Note: No package-dir override - allows packages from both src/ and root

[tool.setuptools.packages.find]
where = ["src", "."]  # Search both src/ and project root
include = ["squadops*", "adapters*"]  # Include both packages

[project]
name = "squadops"
version = "1.0.6"
description = "SquadOps: a production-grade multi-agent orchestration framework."
requires-python = ">=3.11"
authors = [
  { name = "Jason Ladd / Backspring Industries" }
]
readme = "README.md"
license = { text = "MIT" }
# You can add dependencies here later if you want to publish as a package.

[project.scripts]
squadops = "squadops.cli.main:app"

[project.optional-dependencies]
langfuse = ["langfuse>=2.0"]
cli = ["typer>=0.9", "httpx>=0.25", "rich>=13.0"]
pulse = ["jsonschema>=4.0", "httpx>=0.25"]
# Adapter-specific deps. Previously undeclared and pulled in only transitively
# (via Prefect in the Docker images), so minimal/CI envs failed to import the
# adapters and unit collection aborted. See issues #206 / #191.
postgres = ["sqlalchemy>=2.0"]            # adapters/persistence/postgres (Engine/sessionmaker)
auth = ["python-jose[cryptography]>=3.3"] # adapters/auth/keycloak (JWT validation)

#######################################
# Ruff - Linting & basic code hygiene #
#######################################

[tool.ruff]
target-version = "py311"
line-length = 100

extend-exclude = [
    "dist",
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "sips",
    "docs",
    "htmlcov",
    "scripts/dev/migrations",
]

[tool.ruff.lint]
# Rule sets: E,F = pycodestyle errors + pyflakes, I = import sorting, B = bugbear, UP = pyupgrade
select = ["E", "F", "I", "B", "UP", "C90"]

ignore = [
    "E501",  # line length (handled by Black)
    "B008",  # function call in argument defaults
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "B",
]
# SIP-0092 M1 follow-up: ruff is wired into regression as a fail-stop. The
# functions in the files listed below were already over the C901=12 budget
# when the gate landed; they are tracked as follow-up cleanup (the
# cycle_tasks.py handle() decomposition is deferred to its own PR) rather
# than blocking the gate. Newly added code in any file (including these)
# is still gated.
"adapters/cycles/dispatched_flow_executor.py" = ["C901"]
"src/squadops/capabilities/handlers/cycle_tasks.py" = ["C901"]
"scripts/dev/lint_realm_exports.py" = ["C901"]
"scripts/maintainer/audit_sip_registry.py" = ["C901"]
"scripts/maintainer/cleanup_sip_registry.py" = ["C901"]
"scripts/maintainer/update_sip_status.py" = ["C901"]
"src/squadops/cycles/acceptance_checks.py" = ["C901"]
"src/squadops/cycles/implementation_plan.py" = ["C901"]
"tests/integration/test_agent_model_validation.py" = ["C901"]
"tests/unit/config/test_secrets_enforcement.py" = ["C901"]

##########################
# Black - Code formatter #
##########################

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = false

##########################
# Pytest - Test running  #
##########################

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = [".", "src"]
addopts = "-v --tb=short --strict-markers --disable-warnings --color=yes --durations=10"

markers = [
    # Test type markers
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interactions",
    "regression: Regression tests for critical workflows",
    "performance: Performance and load tests",
    "slow: Slow running tests",
    "smoke: Smoke tests for quick validation",
    "stack_validation: Full stack validation tests (requires running containers)",
    # Infrastructure markers
    "database: Tests that require database",
    "rabbitmq: Tests that require RabbitMQ",
    "redis: Tests that require Redis",
    "docker: Tests that require Docker",
    # Domain markers (SIP-0.8.9)
    "domain_agents: Agent domain tests",
    "domain_capabilities: Capability domain tests",
    "domain_skills: Skill domain tests",
    "domain_api: API domain tests",
    "domain_memory: Memory domain tests",
    "domain_config: Config domain tests",
    "domain_build: Build/packaging domain tests",
    "domain_governance: Governance domain tests",
    "domain_orchestration: Orchestration domain tests",
    "domain_adapters: Adapter domain tests",
    "domain_telemetry: Telemetry domain tests",
    # LangFuse (SIP-0061)
    "langfuse: Tests that require a running LangFuse instance",
    # Auth (SIP-0062/0063)
    "auth: Tests that exercise authentication/authorization logic",
    # CLI + Contracts (SIP-0065)
    "domain_cli: CLI domain tests",
    "domain_contracts: Contract domain tests",
    # Pulse Checks (SIP-0070)
    "domain_pulse_checks: Pulse check verification domain tests",
    # Cycle Event System (SIP-0077)
    "domain_events: Cycle lifecycle event system tests",
    # Runtime Modes (SIP-0089)
    "domain_runtime: Agent runtime state, modes, and coordinator tests",
    "domain_cycles: Cycle/run/gate execution domain tests",
]

###########################
# Coverage.py - Code cov  #
###########################

[tool.coverage.run]
branch = true
source = [
  "src/squadops",
  "adapters",
  "scripts",
]
omit = [
  "tests/*",
  "dist/*",
  "**/__init__.py",
  "scripts/dev/migrations/*",
  "htmlcov/*",
  "sips/*",
  "docs/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0

###########################
# Mypy - Optional typing  #
###########################

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

# Optional: Add per-module overrides for stricter type checking
# [[tool.mypy.overrides]]
# module = "agents.*"
# disallow_untyped_defs = true